[tool.poetry]
name = "JSP"
version = "0.1.0"
description = "Predict the salary of any UK job ad based on its contents."
authors = ["drigols <drigols.creative@gmail.com>"]
license = "MIT"
packages = [{ include = "jsp" }]
readme = "README.md"
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
]

[tool.poetry.scripts]
jsp = "jsp.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
scikit-learn = "^1.4.0"
catboost = "^1.2.2"
pandas = "^2.2.2"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
pre-commit = "^3.6.1"
pyupgrade = "^3.15.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
typer = "^0.9.0"
notebook = "^7.0.8"
pillow = "^10.2.0"
streamlit = "^1.31.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
add-future = "isort . --add-import 'from __future__ import annotations'"
check-isort = "isort --check --diff ."
check-black = "black --check --diff ."
check-flake8 = "flake8 ."
apply-linters = "task add-future && task check-isort && task check-black && task check-flake8"
precommit = "pre-commit run --all-files"
pre_test = "task apply-linters && task precommit"
test = "pytest -s -x --cov=jsp -vv"
post_test = "coverage html"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/drigols/jsp/issues"

[tool.black]
line-length = 79
include = '\.pyi?$' # All Python files
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
